--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,7 +9,7 @@
                             <h2 class="text-white">4565</h2>
                             <p class="text-white mb-0">Jan - March 2019</p>
                         </div>
-                        <span class="float-right display-5 opacity-5"><i class="fa fa-shopping-cart"></i></span>
+                        <span class="float-right display-5 opacity-5"><i class="fa fa-500px"></i></span>
                     </div>
                 </div>
             </div>
