--- a/src/views/admin/menus.hbs
+++ b/src/views/admin/menus.hbs
@@ -25,42 +25,35 @@
                                                             <form action="/menu" method="POST">
                                                                 <div class="form-group">
                                                                     <label for="MenuPadre">Menu padre</label>
-                                                                    <select id="menuPadre"
-                                                                        >
-                                                                        {{#each menu}}
-                                                                        <option>{{idMenuPadre}}</option>
-                                                                        {{/each}}
-                                                                    </select>
+                                                                    <input class="form-control" id="menuPadre" name="menuPadre">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="Nombre">Nombre del Menu</label>
                                                                     <input type="text" value="{{Nombre}}" name="Nombre"
                                                                         class="form-control" id="Nombre"
-                                                                        placeholder="Your full name">
+                                                                        placeholder="Escribe el Nombre del Menu">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="Class">Icono del Menu</label>
-                                                                    <input type="text" value="{{Class}}" name="Class"
-                                                                        class="form-control" id="Class"
-                                                                        placeholder="Your full name">
+                                                                    <input class="form-control" id="Class" name="Class">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="Segmento">Segmento</label>
                                                                     <input type="text" value="{{Segmento}}"
                                                                         name="Segmento" class="form-control"
-                                                                        id="Segmento" placeholder="Your full name">
+                                                                        id="Segmento" placeholder="Escribe el Segmento">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="Url">Url</label>
                                                                     <input type="text" value="{{Url}}" name="Url"
                                                                         class="form-control" id="Url"
-                                                                        placeholder="Your full name">
+                                                                        placeholder="Escribe la url">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="Modulo">Modulo</label>
                                                                     <input type="text" value="{{Modulo}}" name="Modulo"
                                                                         class="form-control" id="Modulo"
-                                                                        placeholder="Your full name">
+                                                                        placeholder="Escribe el Modulo">
                                                                 </div>
                                                                 <div class="modal-footer">
                                                                     <button type="submit"
@@ -115,8 +108,27 @@
 <script>
     $(document).ready(function () {
         $('#menuPadre').magicSuggest({
+            data: '/menuJson',
+            name: 'MenuPadre',
+            maxSelection: 1,
+            valueField: 'idMenuPadre',
+            displayField: 'idMenuPadre',
+            renderer: function (data) {
+                return data.idMenuPadre;
+            },
             allowFreeEntries: true
         });
+        $('#Class').magicSuggest({
+            allowFreeEntries: false,
+            data: '/iconoJson',
+            name: 'Class',
+            maxSelection: 1,
+            resultsField: 'Class',
+            valueField: 'iconoClass',
+            displayField: 'iconoClass',
+            renderer: function (data) {
+                return '<icon class="' + data.iconoClass + '"/> ' + data.iconoClass
+            }
+        });
     });
-
 </script>
