--- a/src/views/admin/roles.hbs
+++ b/src/views/admin/roles.hbs
@@ -1,3 +1,68 @@
+<style>
+    .table-header-rotated {
+        border-collapse: collapse;
+    }
+
+    .table-header-rotated td {
+        width: 30px;
+    }
+
+    .table-header-rotated th {
+        padding: 5px 10px;
+    }
+
+    .table-header-rotated td {
+        text-align: center;
+        padding: 10px 5px;
+        border: 1px solid #ccc;
+    }
+
+    .ancho-columna {
+        width: 5%;
+    }
+
+    .table-header-rotated th.rotate {
+        height: 140px;
+        white-space: nowrap;
+    }
+
+    .table-header-rotated th.rotate>div {
+        -webkit-transform: translate(25px, 51px) rotate(315deg);
+        -ms-transform: translate(25px, 51px) rotate(315deg);
+        transform: translate(25px, 51px) rotate(315deg);
+        width: 30px;
+    }
+
+    .table-header-rotated th.rotate>div>span {
+        border-bottom: 1px solid #ccc;
+        padding: 5px 10px;
+    }
+
+    .table-header-rotated th.row-header {
+        padding: 0 10px;
+        border-bottom: 1px solid #ccc;
+    }
+
+    tr.hide-table-padding td {
+        padding: 0;
+    }
+
+    .expand-button {
+        position: relative;
+    }
+
+    .accordion-toggle .expand-button:after {
+        position: absolute;
+        left: .75rem;
+        top: 50%;
+        transform: translate(0, -50%);
+        content: '-';
+    }
+
+    .accordion-toggle.collapsed .expand-button:after {
+        content: '+';
+    }
+</style>
 <div class="content-body">
     <div class="container-fluid mt-3">
         <div class="card">
@@ -27,7 +92,37 @@
                                                                     <label for="nombre">Nombre del Rol</label>
                                                                     <input type="text" value="{{nombre}}" name="nombre"
                                                                         class="form-control" id="nombre"
-                                                                        placeholder="Your full name">
+                                                                        placeholder="Escribe el nombre del Rol">
+                                                                </div>
+                                                                <div class="form-group">
+                                                                    <table id="tblPermisos"
+                                                                        class="table-header-rotated">
+                                                                        <thead>
+                                                                            <tr>
+                                                                                <th></th>
+                                                                                {{#each permiso}}
+                                                                                <th class="rotate">
+                                                                                    <div><span>{{Nombre}}</span></div>
+                                                                                </th>
+                                                                                {{/each}}
+                                                                            </tr>
+                                                                        </thead>
+                                                                        <tbody>
+                                                                            {{#each modulo}}
+                                                                            <tr>
+                                                                                <th class="row-header">{{this.Nombre}}
+                                                                                </th>
+                                                                                {{#each ../permiso}}
+                                                                                <td>
+                                                                                    <input
+                                                                                        name="{{this.Nombre}}|{{../this.Nombre}}"
+                                                                                        type="checkbox">
+                                                                                </td>
+                                                                                {{/each}}
+                                                                            </tr>
+                                                                            {{/each}}
+                                                                        </tbody>
+                                                                    </table>
                                                                 </div>
                                                                 <div class="modal-footer">
                                                                     <button type="submit"
@@ -47,26 +142,60 @@
                         </div>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-striped table-bordered zero-configuration">
+                        <table class="table zero-configuration">
                             <thead>
                                 <tr>
-                                    <th>Nombre</th>
-                                    <th>Correo</th>
-                                    <th>Fecha de creación</th>
+                                    <th class="ancho-columna"></th>
                                     <th>Rol</th>
-                                    <th>Licencia</th>
-                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {{#each rol}}
-                                <tr>
+                                <tr class="accordion-toggle collapsed" id="accordion1" data-toggle="collapse"
+                                    data-parent="#{{nombre}}" href="#{{nombre}}">
+                                    <td class="expand-button"></td>
                                     <td>{{nombre}}</td>
+                                </tr>
+                                <tr class="hide-table-padding">
                                     <td></td>
-                                    <td>New York</td>
-                                    <td>27</td>
-                                    <td>2011/01/25</td>
-                                    <td>$112,000</td>
+                                    <td>
+                                        <div id="{{nombre}}" class="collapse in p-3">
+                                            <div class="row">
+                                                <div class="col-4">
+                                                    <table class="table-header-rotated">
+                                                        <thead>
+                                                            <tr>
+                                                                <th></th>
+                                                                {{#each ../permiso}}
+                                                                <th class="rotate">
+                                                                    <div><span>{{Nombre}}</span></div>
+                                                                </th>
+                                                                {{/each}}
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            {{#each ../modulo}}
+                                                            <tr>
+                                                                <th class="row-header">{{this.Nombre}}</th>
+                                                                {{#each ../../permiso}}
+                                                                <td>
+                                                                    {{#each ../../Permisos}}
+                                                                    {{#ifCond this.idModulo ../../this._id}}
+                                                                    {{#ifCond this.idtipoPermiso ../this._id}}
+                                                                        <i class="fa fa-check-circle-o	"></i>
+                                                                    {{/ifCond}}
+                                                                    {{/ifCond}}
+                                                                    {{/each}}
+                                                                </td>
+                                                                {{/each}}
+                                                            </tr>
+                                                            {{/each}}
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
                                 </tr>
                                 {{/each}}
                             </tbody>
