--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -10,6 +10,7 @@
                                 <h4 class="mt-4"><i class="text-danger">{{url}}</i></h4>
                                 <p>{{Mensaje}}</p>
                                 <p>{{stack}}</p>
+                                <p>{{timeerror}}</p>
                                 <form class="mt-5 mb-5">
                                     <div class="text-center mb-4 mt-4"><a href="/dashboard" class="btn btn-primary">Go to Homepage</a>
                                     </div>
