--- a/src/views/admin/usuarios.hbs
+++ b/src/views/admin/usuarios.hbs
@@ -115,7 +115,7 @@
                                     <td>{{this.Nombre}}</td>
                                     {{/each}}
                                     <td>{{dateFormat createdAt "DD/MM/yyyy, h:mm:ss a" utc}}</td>
-                                    <td>{{email}}</td>
+                                    <td>{{Rol}}</td>
                                     {{#each this.Lic}}
                                     <td>
                                         <div class="progress" style="height: 10px">
