--- a/src/views/layouts/login.hbs
+++ b/src/views/layouts/login.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="h-100" lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
     <link href="assets/css/style.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
+
 <body class="h-100">
     <!--*******************
         Preloader start
@@ -24,6 +27,7 @@
     <!--*******************
         Preloader end
     ********************-->
+    {{>messages}}
     {{{body}}}
     <!--**********************************
         Scripts
@@ -34,9 +38,5 @@
     <script src="assets/js/gleek.js"></script>
     <script src="assets/js/styleSwitcher.js"></script>
 </body>
+
 </html>
-
-
-
-
-
