--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -10,7 +10,7 @@
                             </a>
                             <form action="/login/signin" method="POST" class="mt-5 mb-5 login-input">
                                 <div class="form-group">
-                                    <input type="email" id="email" name="email" class="form-control" placeholder="Email">
+                                    <input type="email" id="email" name="email" value="{{email}}" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="form-group">
                                     <input type="password"  id="password" name="password" class="form-control" placeholder="Password">
