--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -16,3 +16,12 @@
 		})
 </script>
 {{/if}}
+{{#if error}}
+<script>
+		Swal.fire({
+			title: 'Error!',
+			text: '{{error}}',
+			icon: 'error'
+		})
+</script>
+{{/if}}
