--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -15,8 +15,9 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <!-- Favicon icon -->
-    
-    <link href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet">
+
+    <link href="assets/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css"
+        rel="stylesheet">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
     <!-- Pignose Calender -->
     <link href="assets/plugins/pg-calendar/css/pignose.calendar.min.css" rel="stylesheet">
@@ -101,6 +102,24 @@
     <script src="assets/magicsuggest/magicsuggest.js"></script>
     <script src="assets/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js"></script>
     <script src="assets/plugins/validation/jquery.validate.min.js"></script>
+    <!-- Chartjs -->
+    <script src="assets/plugins/chart.js/Chart.bundle.min.js"></script>
+    <!-- Circle progress -->
+    <script src="assets/plugins/circle-progress/circle-progress.min.js"></script>
+    <!-- Datamap -->
+    <script src="assets/plugins/d3v3/index.js"></script>
+    <script src="assets/plugins/topojson/topojson.min.js"></script>
+    <script src="assets/plugins/datamaps/datamaps.world.min.js"></script>
+    <!-- Morrisjs -->
+    <script src="assets/plugins/raphael/raphael.min.js"></script>
+    <script src="assets/plugins/morris/morris.min.js"></script>
+    <!-- Pignose Calender -->
+    <script src="assets/plugins/moment/moment.min.js"></script>
+    <script src="assets/plugins/pg-calendar/js/pignose.calendar.min.js"></script>
+    <!-- ChartistJS -->
+    <script src="assets/plugins/chartist/js/chartist.min.js"></script>
+    <script src="assets/plugins/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+    <script src="assets/js/dashboard/dashboard-1.js"></script>
 </body>
 
 </html>
