--- a/src/views/admin/organizacion.hbs
+++ b/src/views/admin/organizacion.hbs
@@ -66,7 +66,7 @@
                                 <tr>
                                     <td>{{Nombre}}</td>
                                     <td>{{RFC}}</td>
-                                    <td>{{createdAt}}</td>
+                                    <td>{{dateFormat createdAt "DD/MM/yyyy, h:mm:ss a" utc}}</td>
                                 </tr>
                                 {{/each}}
                             </tbody>
