--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -555,3 +555,21 @@
     </div>
     <!-- #/ container -->
 </div>
+    <!-- Chartjs -->
+    <script src="assets/plugins/chart.js/Chart.bundle.min.js"></script>
+    <!-- Circle progress -->
+    <script src="assets/plugins/circle-progress/circle-progress.min.js"></script>
+    <!-- Datamap -->
+    <script src="assets/plugins/d3v3/index.js"></script>
+    <script src="assets/plugins/topojson/topojson.min.js"></script>
+    <script src="assets/plugins/datamaps/datamaps.world.min.js"></script>
+    <!-- Morrisjs -->
+    <script src="assets/plugins/raphael/raphael.min.js"></script>
+    <script src="assets/plugins/morris/morris.min.js"></script>
+    <!-- Pignose Calender -->
+    <script src="assets/plugins/moment/moment.min.js"></script>
+    <script src="assets/plugins/pg-calendar/js/pignose.calendar.min.js"></script>
+    <!-- ChartistJS -->
+    <script src="assets/plugins/chartist/js/chartist.min.js"></script>
+    <script src="assets/plugins/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+    <script src="assets/js/dashboard/dashboard-1.js"></script>
