--- a/src/views/admin/usuarios.hbs
+++ b/src/views/admin/usuarios.hbs
@@ -120,7 +120,7 @@
                                     <td>
                                         <div class="progress" style="height: 10px">
                                             <div class="progress-bar gradient-1"
-                                                style="width: {{porcentajeAvance this.sinceDate this.expireDate}}%;"
+                                                style="width: {{porcentajeAvance this.expireDate this.sinceDate}}%;"
                                                 role="progressbar">
                                             </div>
                                         </div>
